@@ -1,3 +1,7 @@
+2005-12-06  Vincent Noel  <noel@localhost.localdomain>
+
+	* logview.schemas.in: Fix some key descriptions. Fix bug #323141.
+
 2005-12-02  Vincent Noel  <vincent.noel@gmail.com>
 
 	* gnome-system-log.desktop.in: Add the Monitor category to
